# espeak-ng-python

./: .gitignore  DEVELOPMENT.md  NOTES.md  README.md  pyproject.toml  runtests.py  setup.py
examples/: asynchronous_example.py  asynchronous_retrieval_example.py  simple.py  simple_example.py
src/espeak-ng/extension/: espeakngmodule.c
src/espeak_ng/: __init__.py
src/espeak_ng/extension/: __init__.py  _espeakngmodule.c  espeakngmodule.c
tests/: test__espeak_ng.py  test__espeak_ng_asynchronous.py  test_dummy.py  test_espeak_ng.py
