[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "espeak-python"
version = "1.0.0"
authors = [
  { name="Justin Okamoto", email="jdokamoto@gmail.com" },
]
description = "Python wrapper for espeak-ng."
readme = "README.md"
license = {file = "COPYING"}
keywords = ["espeak", "pico", "festival", "TTS", "text-to-speech"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux"
]

[project.urls]
Repository = "https://github.com/justinokamoto/espeak-ng-python"
Issues = "https://github.com/justinokamoto/espeak-ng-python/issues"